layout-management-webapps/src/main/webapp/skin/navigation/webui/component/DefaultStylesheet.css
/**
 * Copyright (C) 2009 eXo Platform SAS.
 * 
 * This is free software; you can redistribute it and/or modify it
 * under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation; either version 2.1 of
 * the License, or (at your option) any later version.
 * 
 * This software is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 * 
 * You should have received a copy of the GNU Lesser General Public
 * License along with this software; if not, write to the Free
 * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 */
@-webkit-keyframes loading {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}
@keyframes loading {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.hide-text {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}
.input-block-level {
  display: block;
  width: 100%;
  min-height: 30px;
  -webkit-box-sizing: border-box;
  /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;
  /* Firefox, other Gecko */
  box-sizing: border-box;
}
.loading-action {
  -webkit-animation: loading 1s infinite linear;
  animation: loading 1s infinite linear;
}

.UIManagement {
	padding: 10px;
	white-space: nowrap;
}

.UIManagement .ManagementBlock {
	background: #f8f8f8 url('background/BgEvenRow.gif') repeat-x left top;
	margin-bottom: 1px;
	_width: 97%;
}

.UIManagement .EvenRow {
	background: #f8f8f8 url('background/BgEvenRow.gif') repeat-x left top;
}

.UIManagement .OddRow {
	background: #eaeaea url('background/BgOddRow.gif') repeat-x left top;
}

.UIManagement table.ManagementBlock td {
	vertical-align: middle;
	white-space: nowrap;
}

.UIManagement table.ManagementBlock td.Content {
	vertical-align: middle;
	background: url('background/LineBg.gif') no-repeat right center; /* orientation=lt */
	background: url('background/LineBg-rt.gif') no-repeat left center; /* orientation=rt */
	padding: 5px 15px;
	width: 27%;
	overflow: hidden;
	white-space: normal;
	word-wrap: break-word;
}

.UIPortalNavigationPortlet .UIManagement table.ManagementBlock td.Content {
	width: 20%;
}

.UIPortalNavigationPortlet .UIManagement table.ManagementBlock td.ActionBlock {
	width: 68%;
}

.UIManagement table.ManagementBlock td.Content strong {
	margin-right: 7px; /* orientation=lt */
	margin-left: 7px; /* orientation=rt */
}

.UIManagement .ManagementBlock .Image {
	_width: 8%;
	line-height: 41px;
	padding: 5px 0px 6px 20px; /* orientation=lt */
	padding: 5px 20px 6px 0px; /* orientation=rt */
}

.UIManagement .ManagementBlock .Image img {
	width: 41px;
	height: 41px;
}

.UIManagement .ManagementBlock .Label {
	color: #000;
	font-weight: bold;
}

.UIManagement .ManagementBlock .ActionBlock {
	padding-left: 20px; /* orientation=lt */
	padding-right: 20px; /* orientation=rt */
	width: 60%;
}

.UIManagement .ManagementBlock .ActionBlock a {
	line-height: 16px;
	width: 110px;
	display: block;
	float: left; /* orientation=lt */
	float: right; /* orientation=rt */
	padding-left: 25px; /* orientation=lt */
	padding-right: 25px; /* orientation=rt */
	margin-right: 15px; /* orientation=lt */
	margin-left: 15px; /* orientation=rt */
	white-space: normal;
}

.UIManagement .ManagementBlock .ActionBlock a:hover {
	color: #9b9b9b;
}

.UIManagement .ManagementBlock .EditLayoutIcon {
	background: url('background/MiniIcon.gif') no-repeat left 2px; /* orientation=lt */
	background: url('background/MiniIcon-rt.gif') no-repeat right 2px; /* orientation=rt */
}

.UIManagement .ManagementBlock .EditNavIcon {
	background: url('background/MiniIcon.gif') no-repeat left -48px; /* orientation=lt */
	background: url('background/MiniIcon-rt.gif') no-repeat right -48px; /* orientation=rt */
}

.UIManagement .ManagementBlock .DeleteIcon {
	background: url('background/MiniIcon.gif') no-repeat left -98px; /* orientation=lt */
	background: url('background/MiniIcon-rt.gif') no-repeat right -98px; /* orientation=rt */
}

.UIManagement .ManagementBlock .EditProIcon{
	background: url('background/MiniIcon.gif') no-repeat left 2px; /* orientation=lt */
	background: url('background/MiniIcon-rt.gif') no-repeat right 2px; /* orientation=rt */
}

.UIManagement .NothingEditable {
        text-align: center;
        font-weight: bold; 
}

/***********************UIAddGroupNavigation************************/

.UIAddGroupNavigation {
	background: white; 
	padding: 0px; 
}

.UIAddGroupNavigation .AddGroupIcon {
	background: url(/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/BlueCirclePlus.gif) no-repeat left center; /* orientation=lt */
	background: url(/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/BlueCirclePlus-rt.gif) no-repeat right center; /* orientation=rt */
	height: 20px; line-height: 20px;
	padding: 3px 0px 3px 20px; /* orientation=lt */
	padding: 3px 20px 3px 0px; /* orientation=rt */
	color: #1d1d1d;
}

.UIPageNavigationForm {
	margin: 20px auto;
}

.UIAddGroupNavigation .WarningAddGroup {
	text-align: center;
	padding: 15px 0px;
	background: #FED8D8;
	margin: 10px;
	font-size: 13px;
}

/********************UINavigationManagement****************/
.UINavigationManagement {
	padding: 10px;
}
.UIPage .UIGroupNavigationPortlet {
  padding: 20px 10px;
}
.UIPage .UIGroupNavigationPortlet .UIVirtualList {
  height: 290px;
}
/*.uiBox .uiGroupNavigationManagement .uiPopup .uiActionBorder {
    margin: 0 -15px 0;
}*/
.uiPopup .uiPageBrowser .uiPageContainer {
  padding: 0;
}
.uiPopup .uiPageSearch {
  margin: 0 0 10px;
  padding-left: 20px; /* orientation=lt */
  padding-right: 20px; /* orientation=rt */
}
.uiPopup .uiPageSearch input[type="text"] {
  width: 216px;
}
.uiManagementSite {
  padding: 20px 10px;
}
.uiManagementSite .uiPopup .uiNavigationManagement.resizable {
  padding-top: 15px;
  margin-bottom: -15px;
}
.uiManagementSite .managementBlock {
  margin-bottom: 10px;
}
.uiManagementSite .managementBlock a {
  color: #333333;
}
.uiManagementSite .managementBlock a [class^="uiIcon"] {
  margin-right: 5px; /* orientation=lt */
  margin-left: 5px; /* orientation=rt */
}
.uiManagementSite .managementBlock td {
  padding: 10px;
}
.uiManagementSite .managementBlock td.content {
  width: 430px;
}
.uiManagementSite .managementBlock td.content .siteName {
  font-weight: bold;
}
.uiPopup #UINavigationNodeSelector {
  margin-bottom: 15px;
}
.uiPopup #UINavigationNodeSelector .UIContainerConfigOptions .uiTrees .treeContainer .node .uiIconNode i {
  top: 2px;
}
.uiAddGroupNavigation .uiGrid.table {
  border: none;
}
.uiAddGroupNavigation .uiGrid.table td,
.uiAddGroupNavigation .uiGrid.table th {
  padding: 8px;
}
.uiAddGroupNavigation .uiGrid.table td a,
.uiAddGroupNavigation .uiGrid.table th a {
  cursor: pointer;
}
.uiBox .uiGroupNavigationManagement .popupContent > .resizable {
  padding-top: 15px;
  margin-bottom: 0;
}
.uiBox .uiGroupNavigationManagement #UIPageNavigationForm .uiContentBox .form-horizontal {
  margin-bottom: 15px;
}
.uiManagementSite .nothingEditable {
  font-weight: bold;
  color: #999999;
}
.uiManagementSite .nothingEditable + .uiAction {
  margin-top: 20px;
}

@font-face {
  font-family: 'IONIC-FONT';
  src: url('/eXoSkin/skin/fonts/Ionic/ionicons.eot');
  src: url('/eXoSkin/skin/fonts/Ionic/ionicons.eot') format('embedded-opentype'), url('/eXoSkin/skin/fonts/Ionic/ionicons.ttf') format('truetype'), url('/eXoSkin/skin/fonts/Ionic/ionicons.woff') format('woff'), url('/eXoSkin/skin/fonts/Ionic/ionicons.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}

.uiGroupsNavigationPortlet .title {
  text-transform: uppercase;
  color: #476A9C;
  background-color: #f1f1f1;
  background-image: -moz-linear-gradient(top, #f8f8f8, #e6e6e6);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f8f8f8), to(#e6e6e6));
  background-image: -webkit-linear-gradient(top, #f8f8f8, #e6e6e6);
  background-image: -o-linear-gradient(top, #f8f8f8, #e6e6e6);
  background-image: linear-gradient(to bottom, #f8f8f8, #e6e6e6);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff8f8f8', endColorstr='#ffe6e6e6', GradientType=0);
  height: 40px;
  line-height: 41px;
  padding: 0 25px;
  margin: 0;
  -webkit-box-shadow: inset 0 1px 0 @baseBackground,0 1px 0 @baseBackground;
  -moz-box-shadow: inset 0 1px 0 @baseBackground,0 1px 0 @baseBackground;
  box-shadow: inset 0 1px 0 @baseBackground,0 1px 0 @baseBackground;
  border-bottom: 1px solid #e1e8ee;
  border-top: 1px solid #e1e8ee;
  text-shadow: none;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
.uiGroupsNavigationPortlet .title a {
  color: #476A9C;
}
.uiGroupsNavigationPortlet .title .uiIconGroupNavigation {
  margin-right: 8px; /* orientation=lt */
  margin-left: 8px; /* orientation=rt */
}
.uiGroupsNavigationPortlet .groupNavigation {
  list-style: none;
  margin: 0;
  padding: 5px 0 15px;
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem > div {
  padding: 8px 10px 0;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem > div .groupIcon {
  margin-left: 20px; /* orientation=lt */
  margin-right: 20px; /* orientation=rt */
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem > div i + .groupIcon {
  margin-left: 4px; /* orientation=lt */
  margin-right: 4px; /* orientation=rt */
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem > div .uiIconArrowDown {
  background-position: 2px -118px;
  cursor: pointer;
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem .groupItem .groupIcon {
  margin-left: 35px; /* orientation=lt */
  margin-right: 35px; /* orientation=rt */
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem .active {
  margin: 8px 0 0 ;
  padding: 7px 10px;
  position: relative;
  background: #ffffff;
  border-top: 1px solid #e1e8ee;
  border-bottom: 1px solid #e1e8ee;
  -webkit-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.11);
  -moz-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.11);
  box-shadow: 0 0px 3px rgba(0, 0, 0, 0.11);
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem .active:after {
  background: #ffffff;
  border: 1px solid #ffffff;
  border-left: 0; /* orientation=lt */
  border-right: 0; /* orientation=rt */
  -webkit-box-shadow: inset -1px 0px 2px rgba(255, 255, 255, 0.14);
  -moz-box-shadow: inset -1px 0px 2px rgba(255, 255, 255, 0.14);
  box-shadow: inset -1px 0px 2px rgba(255, 255, 255, 0.14);
  content: "";
  height: 34px;
  left: 0; /* orientation=lt */
  right: 0; /* orientation=rt */
  top: -1px;
  position: absolute;
  width: 5px;
}
.uiGroupsNavigationPortlet .groupNavigation .groupItem .active > a {
  font-weight: bold;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}
.uiGroupsNavigationPortlet .groupNavigation .groupIcon {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  color: #808080;
}
.uiGroupsNavigationPortlet .groupNavigation .groupIcon:hover {
  color: #476A9C;
}

